--- a/pipelines/incubator/events/deploy-kustomize-task.yaml
+++ b/pipelines/incubator/events/deploy-kustomize-task.yaml
@@ -3,7 +3,7 @@
 apiVersion: tekton.dev/v1beta1
 kind: Task
 metadata:
-  name: deploy-kustomize-task-@Digest@
+  name: deploy-kustomize-task
 spec:
   resources:
     inputs:
