--- a/pipelines/experimental/gitops/deploy-env-task.yaml
+++ b/pipelines/experimental/gitops/deploy-env-task.yaml
@@ -2,7 +2,7 @@
 apiVersion: tekton.dev/v1beta1
 kind: Task
 metadata:
-  name: deploy-kustomize-task
+  name: deploy-env-task
 spec:
   resources:
     inputs:
